Fixed the nav menu faltering due to scrollbar on home page.

--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -79,6 +79,8 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: auto;
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
 }
 
 body {
